gcc/testsuite/gcc.target/i386/pr66810.c
/* { dg-do compile { target ia32 } } */
/* { dg-options "-mno-sse -mno-mmx -miamcu" } */

int vv;

void
i (void)
{
  static int a[vv]; /* { dg-error "storage size" } */
}
